--- a/kubejs/assets/spacetasb/lang/en_us.json
+++ b/kubejs/assets/spacetasb/lang/en_us.json
@@ -68,5 +68,7 @@
 	"tooltip.translation.spacecatasb.settitle.hazmat": "Hazmat",
 	"tooltip.translation.spacecatasb.settitle.naga": "Naga",
 	"tooltip.translation.spacecatasb.settitle.fiery": "Fiery",
-	"tooltip.translation.spacecatasb.settitle.phoenix": "Phoenix"							
+	"tooltip.translation.spacecatasb.settitle.phoenix": "Phoenix",
+	"tooltip.translation.spacecatasb.settitle.explorer": "Explorer",
+	"tooltip.translation.spacecatasb.settitle.bronze": "Bronze"								
 }
