mroe quest changes

--- a/kubejs/changelog.txt
+++ b/kubejs/changelog.txt
@@ -2676,9 +2676,11 @@ Patch 0.3.2.1
 ### Quests:
     -Fixed Tier 2 dependencies
     -Added IE Manual as reward in the last tier0 Quest
+    -Fixed the Enigmatic Amulet Quests
 
 ### Mob balance:
     -Changed Death Tome's resistances and damage type
 
 ### Other:
+    -You now need to crouch to Aoe till the ground with a Hoe
     
