names and tooltips

--- a/kubejs/assets/ponderjs_generated/lang/en_us.json
+++ b/kubejs/assets/ponderjs_generated/lang/en_us.json
@@ -10,8 +10,7 @@
   "kubejs.ponder.furnace_crafting.header": "Furnace Crafting",
   "kubejs.ponder.furnace_crafting.text_1": "Right click the middle block with Coal Coke in hand ",
   "kubejs.ponder.magical_generator_crafting.header": "Magical Generator Crafting",
-  "kubejs.ponder.magical_generator_crafting.text_1": "Drop Lemon Quartz in the middle",
-  "kubejs.ponder.magical_generator_crafting.text_2": "Summon Lightning to finish crafting!",
+  "kubejs.ponder.magical_generator_crafting.text_1": "Right Click the middle block with Lemon Quartz in hand",
   "kubejs.ponder.nature_altar.header": "Building nature altar in the overworld",
   "kubejs.ponder.sacrificial_altar.header": "Explaining the Sacrificial Altar Usage",
   "kubejs.ponder.sacrificial_altar.text_1": "For the altar to work we need a specific sacrifice",
@@ -22,6 +21,11 @@
   "kubejs.ponder.tree_ritual.text_2": "Place items on the wooden stand",
   "kubejs.ponder.tree_ritual.text_3": "Make the sapling grow to finish the craft!",
   "kubejs.ponder.tree_ritual.text_4": "Gold powder is consumed in the process",
+  "kubejs.ponder.vine_generator.header": "Vine Generator Usage",
+  "kubejs.ponder.vine_generator.text_1": "Vine Generator needs Mossy Cobblestone below to work!",
+  "kubejs.ponder.vine_generator.text_2": "Vine Generator will produce either Ivy or Vines depending what its covered in",
+  "kubejs.ponder.vine_generator.text_3": "Vine Generator will produce items and drain nearby moss in random intervals of time",
+  "kubejs.ponder.vine_generator.text_4": "You can also use earth essence to cause instant generation!",
   "kubejs.ponder.wissen_basics.header": "Explaining the wissen basics",
   "kubejs.ponder.wissen_basics.text_1": "Wissen altar creates Wissen from Arcanum and Arcanum Dust",
   "kubejs.ponder.wissen_basics.text_2": "First use your wand in Recieve Connect Mode on the altar",
