--- a/kubejs/changelog.txt
+++ b/kubejs/changelog.txt
@@ -2741,10 +2741,13 @@ Patch 0.3.2.1
 
 ### Recipes:
     -Buffed for Tinted Glass
+    -Fixed for Crying Obsidian 
 
 ### Other:
     -Fixed Wissen Generators tooltips
     -Fixed Stress Generators tooltips
+    -Rearranged Emi Categories
+    
 
 ### Loot:
     -Fixed Abandoned Temple Chest
