--- a/kubejs/changelog.txt
+++ b/kubejs/changelog.txt
@@ -2747,16 +2747,18 @@ Patch 0.3.2.1
 
 ### Recipes:
     -Buffed for Tinted Glass
-    -Fixed for Crying Obsidian 
+    -Fixed for Crying Obsidian
+    -Changed for Tome of Hungering Knowledge
+    
+### Loot:
+    -Fixed Abandoned Temple Chest
+    -Changed for Death Tome
 
 ### Other:
     -Fixed Wissen Generators tooltips
     -Fixed Stress Generators tooltips
     -Rearranged Emi Categories
     -Fixed Steeleaf armor durability buff
-    
-### Loot:
-    -Fixed Abandoned Temple Chest
     -Agronomic Sourcelink is now mined faster with a pickaxe
     -Steel tools are now Unbreakable for real
     
