--- a/kubejs/changelog.txt
+++ b/kubejs/changelog.txt
@@ -2862,6 +2862,7 @@ Patch 0.3.2.1
 ### Mob Balance:
     -Phantoms will no longer spawn with special items in their hand
     -Amount of lost souls in the world is now capped to 5
+    -Adjusted the Ender Dragon Fight
 
 ### Item Balance:
     -No item should be getting aether dimension nerf
