Removal of DeeperDarker and AetherRedux

--- a/kubejs/changelog.txt
+++ b/kubejs/changelog.txt
@@ -2850,6 +2850,7 @@ Patch 0.3.2.1
     -Added Storage Chapter(Work in progress)
 
 ### Worldgen:
+    -Changed Stalactites in TF hills
     -Following blocks will no longer appear in structures:
         -Blaze Burner
         -Mechanical Mixer
